--- a/login.html
+++ b/login.html
@@ -4,11 +4,9 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Complete</title>
-  <link href="index.html">
-  <link rel="stylesheet" href="style.css">
+  <title>Document</title>
 </head>
 <body>
-  <h1>You are logged in!</h1>
+  <h1>Thank's for give me your contact. I'll contact you soon! 👍</h1>
 </body>
 </html>
