--- a/progress.html
+++ b/progress.html
@@ -4,22 +4,25 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>IT PROGRESS</title>
+    <title>My IT Progress</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
     
-    <div class="habilidades">
-        <article class="skill">
-            <h2 class="card_title">Web</h2>
-            <div class="skills">
-                <div class="skills__item">
-                <p class="skills_tech">HTML</p>
-                <div class="skills__bar Skills__bar--70"></div>
-            </div>
-            <div class="skills__item">
-                <p class="skills_tech">CSS</p>
-                <div class="skills__bar Skills__bar--60"></div>
+    <div class="ability">
+        <h2>My Ability</h2>
+        <p>Python</p>
+        <div class="container">
+            <div class="skills Python">80%</div>
+        <p>HTML</p>
+            <div class="container">
+                <div class="skills HTML">70%</div>
+            <p>Css</p>
+        <div class="container">
+            <div class="skills Css">70%</div>
+            <p>Javascript</p>
+        <div class="container">
+            <div class="skills Javascript">10%</div>
             </div>
         </article>
       </section>
